--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Device configuration for SEMC Xperia Arc/Arc S (LT15i/LT18i)
 
-Copyright (C) 2013 LegacyXperia Project
+Copyright (C) 2013-2014 LegacyXperia Project
+Copyright (C) 2014 Michael Bestas <mikeioannina@gmail.com>
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
